@@ -1,3 +1,8 @@
+2004-10-03  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmScript/Instructions.c (Loop):
+	fixed parsing of for loops
+
 2004-09-27  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmPager/x_pager.c (AddNewWindow):
