@@ -1,3 +1,9 @@
+2004-10-17  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/icons.c (DeIconify):
+	defused possible endless loop when a window iconified by the
+	transientfor window loses the "transient" relationship
+
 2004-09-30  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* configure.in:
